--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Web app with Smart Contract doing business logic to manage token shares between token holders of Keeper Solutions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack"
   },
   "author": "Janko Salkovic",
   "license": "ISC",
   "dependencies": {
     "chart.js": "^2.7.2",
     "jquery": "^3.3.1"
+  },
+  "devDependencies": {
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
   }
 }
