--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Janko Salkovic",
   "license": "ISC",
   "dependencies": {
+    "ajax": "0.0.4",
     "chart.js": "^2.7.2",
     "jquery": "^3.3.1"
   },
